# turkey-germany-macro-lab

./: .env.example  .gitignore  README.md  pyproject.toml
outputs/tables/: best_models_summary.csv  model_improvement_vs_naive.csv  model_results_summary.csv  reporting_notes_summary.csv  rolling_predictions_all_countries.csv  rolling_predictions_de.csv  rolling_predictions_ea.csv  rolling_predictions_tr.csv
sql/ddl/: 01_create_schema.sql  02_create_dimensions.sql  03_create_facts.sql  04_create_views.sql
sql/dml/: 01_seed_sources.sql  02_seed_countries.sql  03_seed_frequencies.sql  04_seed_indicators.sql
src/: __init__.py
src/analysis/: baseline_naive_de.py  baseline_naive_ea.py  baseline_naive_tr.py  benchmark_summary_de.py  benchmark_summary_ea.py  benchmark_summary_tr.py  cross_country_baseline_summary.py  cross_country_rolling_summary.py  evaluate_time_split_de.py  evaluate_time_split_ea.py  evaluate_time_split_tr.py  inspect_model_input_de.py  inspect_model_input_ea.py  inspect_model_input_tr.py  linear_regression_tr.py  prepare_model_data_de.py  prepare_model_data_ea.py  prepare_model_data_tr.py  ridge_regression_de.py  ridge_regression_ea.py  ridge_regression_tr.py  rolling_evaluation_de.py  rolling_evaluation_ea.py  rolling_evaluation_tr.py
src/config/: __init__.py  logging_config.py  settings.py
src/db/: __init__.py  engine.py  export_model_inputs.py  io.py  load_cbrt_fx.py  load_ecb.py  load_eurostat.py  load_oecd.py  load_oecd_business_confidence.py  load_oecd_euro_area_business_confidence.py  load_oecd_euro_area_industrial_production.py  (+8 more)
(+72 files in other folders)
