[project]
name = "turkey-germany-macro-lab"
version = "0.1.0"
description = "A reproducible macroeconomics analytics and forecasting project for Türkiye, Germany, and the euro area."
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "sqlalchemy",
    "psycopg[binary]",
    "requests",
    "python-dotenv",
    "scikit-learn",
    "statsmodels",
    "matplotlib",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytask",
    "jupyter",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]